German translations and listpage as frontpage

--- a/themes/ms-theme/layouts/_default/list.html
+++ b/themes/ms-theme/layouts/_default/list.html
@@ -14,7 +14,7 @@
             {{ end }}
             </div>            
             <div class="row listrecent">
-                {{ $post_paginator := .Paginate (.Pages) 12 }}
+                {{ $post_paginator := .Paginate (.Pages.ByTitle) }}
                 {{ range $post_paginator.Pages }}
                     {{- partial "list-partials/postbox.html" . -}}
                 {{end}}
