--- a/themes/ms-theme/layouts/index.html
+++ b/themes/ms-theme/layouts/index.html
@@ -3,58 +3,29 @@
 {{ end }}
 
 {{ define "main" }}
+    {{- partial "_shared/title.html" . -}}
     <div class="main-content">
-        <header class="text-center">
-            {{ with .Site.Params.index.picture }}
-                <img src="{{ . | urlize | relURL }}" class="rounded-circle text-center index-image">
-            {{ end }}
-            <h1 class="index-title">{{ .Site.Params.index.title }}</h1>
-        </header>
-
-        <section class="text-center">
-            {{ with .Site.Params.index.subtitle }}
-            <h3 class="index-sub">{{ . }}</h3>
-            {{ end }}
-            {{ with .Site.Params.index.mdtext }}
-            <h6 class="index-text">{{ . | markdownify }}</h6>
-            {{ end }}
+        <!-- Posts Index
+        ================================================== -->
+        <section class="recent-posts">            
+            <div class="section-title">
+                          
+                <h2><span>Alle Ergebnisse:</span></h2>                
+ 
+            </div>            
+            <div class="row listrecent">
+                {{ $post_paginator := .Paginate (where .Pages.ByTitle "Type" "post" ) }}
+                {{ range $post_paginator.Pages }}
+                    {{- partial "list-partials/postbox.html" . -}}
+                {{end}}
+            </div>
         </section>
-        <section class="text-center">
-         
-            {{ if not (eq (len $.Site.Taxonomies.tags) 0) }}
-                {{ $fontUnit := "rem" }}
-                {{ $largestFontSize := 2.0 }}
-                {{ $largestFontSize := 2.5 }}
-                {{ $smallestFontSize := 1.0 }}
-                {{ $fontSpread := sub $largestFontSize $smallestFontSize }}
-                {{ $max := add (len (index $.Site.Taxonomies.tags.ByCount 0).Pages) 1 }}
-                {{ $min := len (index $.Site.Taxonomies.tags.ByCount.Reverse 0).Pages }}
-                {{ $spread := sub $max $min }}
-                {{ $fontStep := div $fontSpread $spread }}
-
-                <div id="tag-cloud" style="padding: 5px 15px">
-                    {{ range $name, $taxonomy := $.Site.Taxonomies.tags }}
-                        {{ $currentTagCount := len $taxonomy.Pages }}
-                        {{ $currentFontSize := (add $smallestFontSize (mul (sub $currentTagCount $min) $fontStep) ) }}
-                        {{ $count := len $taxonomy.Pages }}
-                        {{ $weigth := div (sub (math.Log $count) (math.Log $min)) (sub (math.Log $max) (math.Log $min)) }}
-                        {{ $currentFontSize := (add $smallestFontSize (mul (sub $largestFontSize $smallestFontSize) $weigth) ) }}
-                        <!--Current font size: {{$currentFontSize}}-->
-                        <a href="{{ "/tags/" | relLangURL }}{{ $name | urlize }}" style="font-size:{{$currentFontSize}}{{$fontUnit}}">{{ $name }}</a>
-                    {{ end }}
-                </div>
-            {{ end }}
-
-        </section>
+        {{- partial "list-partials/pagination.html" $post_paginator -}}
     </div>
-    {{- partial "_shared/social.html" . -}}
-    {{ if isset .Site.Params.index "alertbar" }}
-    	{{ if .Site.Params.index.alertbar }}
-            {{- partial "_shared/alertbar.html" . -}}
-        {{ end }}
-    {{ end }}
-{{end}}
+    {{- partial "_shared/alertbar.html" . -}}
+{{ end }}
 
-{{ define "footer" }}
+{{ define "footer"}}
+    {{- partial "_shared/jumbotron.html" . -}}
     {{- partial "_shared/footer.html" . -}}
-{{end}}
+{{ end }}
