--- a/themes/ms-theme/layouts/partials/single-partials/share.html
+++ b/themes/ms-theme/layouts/partials/single-partials/share.html
@@ -1,5 +1,5 @@
 <div class="share">
-    <p>Share</p>
+    <p>Teilen</p>
     <ul>
         <li class="ml-1 mr-1">
         <a target="_blank" href="https://twitter.com/intent/tweet?text={{ .Title }}&url={{ .URL | absLangURL }}" onclick="window.open(this.href, 'twitter-share', 'width=550,height=435');return false;">
@@ -10,12 +10,6 @@
         <li class="ml-1 mr-1">
         <a target="_blank" href="https://facebook.com/sharer.php?u={{ .URL | absLangURL }}" onclick="window.open(this.href, 'facebook-share', 'width=550,height=435');return false;">
         <i class="fab fa-facebook-f"></i>
-        </a>
-        </li>
-        
-        <li class="ml-1 mr-1">
-        <a target="_blank" href="https://plus.google.com/share?url={{ .URL | absLangURL }}" onclick="window.open(this.href, 'google-share', 'width=550,height=435');return false;">
-        <i class="fab fa-google"></i>
         </a>
         </li>
 
