--- a/themes/ms-theme/static/css/medium.css
+++ b/themes/ms-theme/static/css/medium.css
@@ -30,7 +30,6 @@ pre {
     border-radius: 3px;
 }
 .mediumnavigation {
-    background:rgba(255,255,255,.97);
     box-shadow:0 2px 2px -2px rgba(0,0,0,.15);
     transition: top 0.2s ease-in-out;
 }
@@ -52,7 +51,7 @@ section.recent-posts {
 .section-title h2 {
     border-bottom:1px solid rgba(0,0,0,.125);
     margin-bottom:25px;
-    font-weight:700;
+    font-weight:500;
     font-size:1.4rem;
     margin-bottom:27px;
 }
@@ -113,11 +112,11 @@ section.recent-posts {
 }
 .listfeaturedtag h2.card-title,.listrecent h2.card-title {
     font-size:1.3rem;
-    font-weight:700;
     line-height: 1.25;
+    border-top: 4px solid #343a40;
 }
 .listfeaturedtag h4.card-text,.listrecent h4.card-text {
-    color:rgba(0,0,0,.44);
+    color:rgba(0,0,0,.64);
     font-size:0.95rem;
     line-height:1.4;
     font-weight:400;
@@ -202,6 +201,7 @@ span.post-name a,span.post-read-more a:hover {
 }
 .mediumnavigation .navbar-brand {
     font-weight:500;
+    padding:0;
 }
 .mediumnavigation .dropdown-menu {
     border:1px solid rgba(0,0,0,0.08);
@@ -217,11 +217,8 @@ span.post-name a,span.post-read-more a:hover {
     cursor:pointer;
 }
 .mediumnavigation .navbar-brand img {
-    max-height:30px;
+    max-height:40px;
     margin-right:5px;
-}
-.mainheading h1.sitetitle {
-    font-family:Righteous;
 }
 .mainheading h1.posttitle {
     font-weight:700;
@@ -234,9 +231,8 @@ span.post-name a,span.post-read-more a:hover {
     font-size:0.8rem;
     color:rgba(0,0,0,.44);
     margin-top:50px;
-    margin-bottom:62px;
+    padding-bottom:62px;
     position: relative;
-    background: #fff;
 }
 .link-dark {
     color:rgba(0,0,0,.8);
@@ -385,12 +381,6 @@ ul.tags {
 ul.tags li {
     display:inline-block;
     font-size:0.9rem;
-}
-ul.tags li a {
-    background:rgba(0,0,0,.05);
-    color:rgba(0,0,0,.6);
-    border-radius:3px;
-    padding:5px 10px;
 }
 ul.tags li a:hover {
     background:rgba(0,0,0,.07);
