--- a/themes/ms-theme/layouts/index.html
+++ b/themes/ms-theme/layouts/index.html
@@ -10,7 +10,7 @@
         <section class="recent-posts">            
             <div class="section-title">
                           
-                <h2><span>Alle Ergebnisse:</span></h2>                
+                <h2><span>Alle Ergebnisse (A-Z):</span></h2>                
  
             </div>            
             <div class="row listrecent">
