--- a/themes/ms-theme/layouts/partials/_shared/jumbotron.html
+++ b/themes/ms-theme/layouts/partials/_shared/jumbotron.html
@@ -28,8 +28,9 @@
 									{{ $count := len $taxonomy.Pages }}
 									{{ $weigth := div (sub (math.Log $count) (math.Log $min)) (sub (math.Log $max) (math.Log $min)) }}
 									{{ $currentFontSize := (add $smallestFontSize (mul (sub $largestFontSize $smallestFontSize) $weigth) ) }}
+									{{ $lineHeight := (add $currentFontSize 0.1) }}
 									<!--Current font size: {{$currentFontSize}}-->
-									<a href="{{ "/tags/" | relLangURL }}{{ $name | urlize }}" style="font-size:{{$currentFontSize}}{{$fontUnit}}">{{ $name }}</a>
+									<a href="{{ "/tags/" | relLangURL }}{{ $name | urlize }}" style="font-size:{{$currentFontSize}}{{$fontUnit}};line-height:{{$lineHeight}}{{$fontUnit}}">{{ replace $name "-" " " }}</a>
 								{{ end }}
 							</div>
 						{{ end }}
