--- a/themes/ms-theme/static/css/additional.css
+++ b/themes/ms-theme/static/css/additional.css
@@ -24,11 +24,25 @@
     text-align: center !important;
 }
 
-#tag-cloud a {
+.tags a, #tag-cloud a {
     background-color: #afa;
     border-radius: 10px;
     padding: 2px 11px;
     border: 5px solid;
     text-transform: capitalize;
     color: #00ab6b;
+    white-space: nowrap; 
+    display: inline-block;
+    margin: 2px 0;
+}
+.mainheading h1.sitetitle,
+h2, h1 {
+    font-family: 'Leckerli One', cursive;
+    font-weight: 500!important;
+}
+nav, footer {
+    background: rgba(0, 0, 0, 0) url(/images/bg-pentagon.png) repeat scroll 0% 0%;
+}
+body {
+    background: rgba(0, 0, 0, 0) url(/images/bg-stripes-light.png) repeat scroll 0% 0%;
 }
