--- a/themes/ms-theme/layouts/partials/_shared/head.html
+++ b/themes/ms-theme/layouts/partials/_shared/head.html
@@ -8,10 +8,9 @@
 	<title>{{ .Page.Title }} | {{ .Site.Title }}</title>
 	{{ with .Site.Params.meta.description }}<meta name="description" content="{{ . }}">{{ end }}
 	{{ with .Site.Params.meta.keywords }}<meta name="keywords" content="{{ . }}">{{ end }}
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
-	 crossorigin="anonymous">
-	<link href="https://fonts.googleapis.com/css?family=Freckle+Face|Leckerli+One" rel="stylesheet"> 
+	<link rel="stylesheet" href="/css/bootstrap.4.1.3.min.css">
+	<link rel="stylesheet" href="/css/fontawesome.5.0.13.css">
+	<link href="https://fonts.googleapis.com/css?family=Leckerli+One" rel="stylesheet"> 
 	<link href="{{ "/css/medium.css" | urlize | relURL }}" rel="stylesheet">
 	<link href="{{ "/css/additional.css" | urlize | relURL }}" rel="stylesheet">
 </head>
