--- a/themes/ms-theme/layouts/partials/_shared/js.html
+++ b/themes/ms-theme/layouts/partials/_shared/js.html
@@ -2,10 +2,10 @@
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
     
-<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script src="/js/jquery-3.3.1.min.js"></script>
     
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="/js/popper.1.14.3.min.js"></script>
     
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>    
+<script src="/js/bootstrap.4.1.3.min.js"></script>    
     
 <script src="{{"/js/mediumish.js" | urlize | relURL }}"></script>
