--- a/themes/ms-theme/layouts/partials/_shared/head.html
+++ b/themes/ms-theme/layouts/partials/_shared/head.html
@@ -1,16 +1,18 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        {{ .Hugo.Generator }}
+	{{ hugo.Generator }}
 	{{ with .Site.Params.logo }}
 	<link rel="icon" href="{{ . | urlize | relURL }}">
 	{{ end }}
 	<title>{{ .Page.Title }} | {{ .Site.Title }}</title>
-	{{ with .Site.Params.meta.description }}<meta name="description" content="{{ . }}">{{ end }}
-	{{ with .Site.Params.meta.keywords }}<meta name="keywords" content="{{ . }}">{{ end }}
+	{{ with .Site.Params.meta.description }}
+	<meta name="description" content="{{ . }}">{{ end }}
+	{{ with .Site.Params.meta.keywords }}
+	<meta name="keywords" content="{{ . }}">{{ end }}
 	<link rel="stylesheet" href="/css/bootstrap.4.1.3.min.css">
 	<link rel="stylesheet" href="/css/fontawesome.5.0.13.css">
-	<link href="https://fonts.googleapis.com/css?family=Leckerli+One" rel="stylesheet"> 
-	<link href="{{ "/css/medium.css" | urlize | relURL }}" rel="stylesheet">
-	<link href="{{ "/css/additional.css" | urlize | relURL }}" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Leckerli+One" rel="stylesheet">
+	<link href="{{ " /css/medium.css" | urlize | relURL }}" rel="stylesheet">
+	<link href="{{ " /css/additional.css" | urlize | relURL }}" rel="stylesheet">
 </head>
