--- a/themes/ms-theme/layouts/index.html
+++ b/themes/ms-theme/layouts/index.html
@@ -4,10 +4,15 @@
 
 {{ define "main" }}
 {{- partial "_shared/title.html" . -}}
+{{ $pag := .Paginator.PageNumber }}
+{{ if eq $pag  1}}
+    {{- partial "_shared/frontpage-intro.html" . -}}
+{{- end -}}
 <div class="main-content">
     <!-- Posts Index
         ================================================== -->
-    <section class="recent-posts">
+
+        <section class="recent-posts">
         <div class="section-title">
             <h2><span>Alle Ergebnisse (A-Z):</span></h2>
 
